--- a/homework2 (part1)/index.html
+++ b/homework2 (part1)/index.html
@@ -57,7 +57,7 @@
       <label for="website"></label>
       <input type="website" id="website">
 </form>
-<p>i have read the agreement </p>
-<button type="submit">register </button>
+   <label for="i have read the agreement"> <input type="checkbox" name="" id=""></label>
+<button type="submit">register  </button>
 </body>
 </html>
