--- a/homework2 (part1)/index.html
+++ b/homework2 (part1)/index.html
@@ -56,8 +56,24 @@
    <form>
       <label for="website"></label>
       <input type="website" id="website">
+
+
 </form>
-   <label for="i have read the agreement"> <input type="checkbox" name="" id=""></label>
-<button type="submit">register  </button>
+
+<p><input type="radio" name="" id=""> i have read the <a href="http://">agreement</a> </p>
+
+
+
+
+<button onclick="myFunction()">register</button>
+
+<p id="demo"></p>
+
+<script>
+function myFunction() {
+  document.getElementById("demo").innerHTML = "login, please wait for minute";
+}
+</script>
+
 </body>
 </html>   
